y.output
Terminals unused in grammar

    AND
    OR


State 10 conflicts: 1 shift/reduce
State 36 conflicts: 10 shift/reduce
State 89 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 headers: headers headers

    3 $@1: ε

    4 headers: INCLUDE $@1

    5 main: datatype ID

    6 datatype: INT
    7         | FLOAT
    8         | CHAR
    9         | VOID

   10 $@2: ε

   11 body: FOR $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

   12 $@3: ε

   13 $@4: ε

   14 $@5: ε

   15 body: IF $@3 '(' condition ')' $@4 '{' body '}' $@5 else
   16     | statement ';'
   17     | body body

   18 $@6: ε

   19 body: PRINTFF $@6 '(' STR ')' ';'

   20 $@7: ε

   21 body: SCANFF $@7 '(' STR ',' '&' ID ')' ';'

   22 $@8: ε

   23 else: ELSE $@8 '{' body '}'
   24     | ε

   25 condition: value relop value
   26          | TRUE
   27          | FALSE
   28          | ε

   29 $@9: ε

   30 statement: datatype ID $@9 init

   31 $@10: ε

   32 statement: ID $@10 '=' expression

   33 $@11: ε

   34 statement: ID $@11 relop expression

   35 $@12: ε

   36 statement: ID $@12 UNARY
   37          | UNARY ID

   38 init: '=' value
   39     | ε

   40 expression: expression arithmetic expression
   41           | value

   42 arithmetic: ADD
   43           | SUBTRACT
   44           | MULTIPLY
   45           | DIVIDE

   46 relop: LT
   47      | GT
   48      | LE
   49      | GE
   50      | EQ
   51      | NE

   52 value: NUMBER
   53      | FLOAT_NUM
   54      | CHARACTER
   55      | ID

   56 $@13: ε

   57 return: RETURN $@13 value ';'
   58       | ε


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 21
    '(' (40) 1 11 15 19 21
    ')' (41) 1 11 15 19 21
    ',' (44) 21
    ';' (59) 11 16 19 21 57
    '=' (61) 32 38
    '{' (123) 1 11 15 23
    '}' (125) 1 11 15 23
    error (256)
    VOID (258) 9
    CHARACTER <nd_obj> (259) 54
    PRINTFF <nd_obj> (260) 19
    SCANFF <nd_obj> (261) 21
    INT <nd_obj> (262) 6
    FLOAT <nd_obj> (263) 7
    CHAR <nd_obj> (264) 8
    FOR <nd_obj> (265) 11
    IF <nd_obj> (266) 15
    ELSE <nd_obj> (267) 23
    TRUE <nd_obj> (268) 26
    FALSE <nd_obj> (269) 27
    NUMBER <nd_obj> (270) 52
    FLOAT_NUM <nd_obj> (271) 53
    ID <nd_obj> (272) 5 21 30 32 34 36 37 55
    LE <nd_obj> (273) 48
    GE <nd_obj> (274) 49
    EQ <nd_obj> (275) 50
    NE <nd_obj> (276) 51
    GT <nd_obj> (277) 47
    LT <nd_obj> (278) 46
    AND <nd_obj> (279)
    OR <nd_obj> (280)
    STR <nd_obj> (281) 19 21
    ADD <nd_obj> (282) 42
    MULTIPLY <nd_obj> (283) 44
    DIVIDE <nd_obj> (284) 45
    SUBTRACT <nd_obj> (285) 43
    UNARY <nd_obj> (286) 36 37
    INCLUDE <nd_obj> (287) 4
    RETURN <nd_obj> (288) 57


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program <nd_obj> (43)
        on left: 1
        on right: 0
    headers <nd_obj> (44)
        on left: 2 4
        on right: 1 2
    $@1 (45)
        on left: 3
        on right: 4
    main <nd_obj> (46)
        on left: 5
        on right: 1
    datatype <nd_obj> (47)
        on left: 6 7 8 9
        on right: 5 30
    body <nd_obj> (48)
        on left: 11 15 16 17 19 21
        on right: 1 11 15 17 23
    $@2 (49)
        on left: 10
        on right: 11
    $@3 (50)
        on left: 12
        on right: 15
    $@4 (51)
        on left: 13
        on right: 15
    $@5 (52)
        on left: 14
        on right: 15
    $@6 (53)
        on left: 18
        on right: 19
    $@7 (54)
        on left: 20
        on right: 21
    else <nd_obj> (55)
        on left: 23 24
        on right: 15
    $@8 (56)
        on left: 22
        on right: 23
    condition <nd_obj3> (57)
        on left: 25 26 27 28
        on right: 11 15
    statement <nd_obj> (58)
        on left: 30 32 34 36 37
        on right: 11 16
    $@9 (59)
        on left: 29
        on right: 30
    $@10 (60)
        on left: 31
        on right: 32
    $@11 (61)
        on left: 33
        on right: 34
    $@12 (62)
        on left: 35
        on right: 36
    init <nd_obj2> (63)
        on left: 38 39
        on right: 30
    expression <nd_obj2> (64)
        on left: 40 41
        on right: 32 34 40
    arithmetic <nd_obj> (65)
        on left: 42 43 44 45
        on right: 40
    relop <nd_obj> (66)
        on left: 46 47 48 49 50 51
        on right: 25 34
    value <nd_obj2> (67)
        on left: 52 53 54 55
        on right: 25 38 41 57
    return <nd_obj> (68)
        on left: 57 58
        on right: 1
    $@13 (69)
        on left: 56
        on right: 57


State 0

    0 $accept: • program $end

    INCLUDE  shift, and go to state 1

    program  go to state 2
    headers  go to state 3


State 1

    4 headers: INCLUDE • $@1

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: headers • main '(' ')' '{' body return '}'
    2 headers: headers • headers

    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    INCLUDE  shift, and go to state 1

    headers   go to state 10
    main      go to state 11
    datatype  go to state 12


State 4

    4 headers: INCLUDE $@1 •

    $default  reduce using rule 4 (headers)


State 5

    0 $accept: program $end •

    $default  accept


State 6

    9 datatype: VOID •

    $default  reduce using rule 9 (datatype)


State 7

    6 datatype: INT •

    $default  reduce using rule 6 (datatype)


State 8

    7 datatype: FLOAT •

    $default  reduce using rule 7 (datatype)


State 9

    8 datatype: CHAR •

    $default  reduce using rule 8 (datatype)


State 10

    2 headers: headers • headers
    2        | headers headers •

    INCLUDE  shift, and go to state 1

    INCLUDE   [reduce using rule 2 (headers)]
    $default  reduce using rule 2 (headers)

    headers  go to state 10


State 11

    1 program: headers main • '(' ')' '{' body return '}'

    '('  shift, and go to state 13


State 12

    5 main: datatype • ID

    ID  shift, and go to state 14


State 13

    1 program: headers main '(' • ')' '{' body return '}'

    ')'  shift, and go to state 15


State 14

    5 main: datatype ID •

    $default  reduce using rule 5 (main)


State 15

    1 program: headers main '(' ')' • '{' body return '}'

    '{'  shift, and go to state 16


State 16

    1 program: headers main '(' ')' '{' • body return '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 24
    statement  go to state 25


State 17

   19 body: PRINTFF • $@6 '(' STR ')' ';'

    $default  reduce using rule 18 ($@6)

    $@6  go to state 26


State 18

   21 body: SCANFF • $@7 '(' STR ',' '&' ID ')' ';'

    $default  reduce using rule 20 ($@7)

    $@7  go to state 27


State 19

   11 body: FOR • $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 28


State 20

   15 body: IF • $@3 '(' condition ')' $@4 '{' body '}' $@5 else

    $default  reduce using rule 12 ($@3)

    $@3  go to state 29


State 21

   32 statement: ID • $@10 '=' expression
   34          | ID • $@11 relop expression
   36          | ID • $@12 UNARY

    UNARY     reduce using rule 35 ($@12)
    '='       reduce using rule 31 ($@10)
    $default  reduce using rule 33 ($@11)

    $@10  go to state 30
    $@11  go to state 31
    $@12  go to state 32


State 22

   37 statement: UNARY • ID

    ID  shift, and go to state 33


State 23

   30 statement: datatype • ID $@9 init

    ID  shift, and go to state 34


State 24

    1 program: headers main '(' ')' '{' body • return '}'
   17 body: body • body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    RETURN   shift, and go to state 35

    $default  reduce using rule 58 (return)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25
    return     go to state 37


State 25

   16 body: statement • ';'

    ';'  shift, and go to state 38


State 26

   19 body: PRINTFF $@6 • '(' STR ')' ';'

    '('  shift, and go to state 39


State 27

   21 body: SCANFF $@7 • '(' STR ',' '&' ID ')' ';'

    '('  shift, and go to state 40


State 28

   11 body: FOR $@2 • '(' statement ';' condition ';' statement ')' '{' body '}'

    '('  shift, and go to state 41


State 29

   15 body: IF $@3 • '(' condition ')' $@4 '{' body '}' $@5 else

    '('  shift, and go to state 42


State 30

   32 statement: ID $@10 • '=' expression

    '='  shift, and go to state 43


State 31

   34 statement: ID $@11 • relop expression

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 50


State 32

   36 statement: ID $@12 • UNARY

    UNARY  shift, and go to state 51


State 33

   37 statement: UNARY ID •

    $default  reduce using rule 37 (statement)


State 34

   30 statement: datatype ID • $@9 init

    $default  reduce using rule 29 ($@9)

    $@9  go to state 52


State 35

   57 return: RETURN • $@13 value ';'

    $default  reduce using rule 56 ($@13)

    $@13  go to state 53


State 36

   17 body: body • body
   17     | body body •

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    VOID      [reduce using rule 17 (body)]
    PRINTFF   [reduce using rule 17 (body)]
    SCANFF    [reduce using rule 17 (body)]
    INT       [reduce using rule 17 (body)]
    FLOAT     [reduce using rule 17 (body)]
    CHAR      [reduce using rule 17 (body)]
    FOR       [reduce using rule 17 (body)]
    IF        [reduce using rule 17 (body)]
    ID        [reduce using rule 17 (body)]
    UNARY     [reduce using rule 17 (body)]
    $default  reduce using rule 17 (body)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


State 37

    1 program: headers main '(' ')' '{' body return • '}'

    '}'  shift, and go to state 54


State 38

   16 body: statement ';' •

    $default  reduce using rule 16 (body)


State 39

   19 body: PRINTFF $@6 '(' • STR ')' ';'

    STR  shift, and go to state 55


State 40

   21 body: SCANFF $@7 '(' • STR ',' '&' ID ')' ';'

    STR  shift, and go to state 56


State 41

   11 body: FOR $@2 '(' • statement ';' condition ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 57


State 42

   15 body: IF $@3 '(' • condition ')' $@4 '{' body '}' $@5 else

    CHARACTER  shift, and go to state 58
    TRUE       shift, and go to state 59
    FALSE      shift, and go to state 60
    NUMBER     shift, and go to state 61
    FLOAT_NUM  shift, and go to state 62
    ID         shift, and go to state 63

    $default  reduce using rule 28 (condition)

    condition  go to state 64
    value      go to state 65


State 43

   32 statement: ID $@10 '=' • expression

    CHARACTER  shift, and go to state 58
    NUMBER     shift, and go to state 61
    FLOAT_NUM  shift, and go to state 62
    ID         shift, and go to state 63

    expression  go to state 66
    value       go to state 67


State 44

   48 relop: LE •

    $default  reduce using rule 48 (relop)


State 45

   49 relop: GE •

    $default  reduce using rule 49 (relop)


State 46

   50 relop: EQ •

    $default  reduce using rule 50 (relop)


State 47

   51 relop: NE •

    $default  reduce using rule 51 (relop)


State 48

   47 relop: GT •

    $default  reduce using rule 47 (relop)


State 49

   46 relop: LT •

    $default  reduce using rule 46 (relop)


State 50

   34 statement: ID $@11 relop • expression

    CHARACTER  shift, and go to state 58
    NUMBER     shift, and go to state 61
    FLOAT_NUM  shift, and go to state 62
    ID         shift, and go to state 63

    expression  go to state 68
    value       go to state 67


State 51

   36 statement: ID $@12 UNARY •

    $default  reduce using rule 36 (statement)


State 52

   30 statement: datatype ID $@9 • init

    '='  shift, and go to state 69

    $default  reduce using rule 39 (init)

    init  go to state 70


State 53

   57 return: RETURN $@13 • value ';'

    CHARACTER  shift, and go to state 58
    NUMBER     shift, and go to state 61
    FLOAT_NUM  shift, and go to state 62
    ID         shift, and go to state 63

    value  go to state 71


State 54

    1 program: headers main '(' ')' '{' body return '}' •

    $default  reduce using rule 1 (program)


State 55

   19 body: PRINTFF $@6 '(' STR • ')' ';'

    ')'  shift, and go to state 72


State 56

   21 body: SCANFF $@7 '(' STR • ',' '&' ID ')' ';'

    ','  shift, and go to state 73


State 57

   11 body: FOR $@2 '(' statement • ';' condition ';' statement ')' '{' body '}'

    ';'  shift, and go to state 74


State 58

   54 value: CHARACTER •

    $default  reduce using rule 54 (value)


State 59

   26 condition: TRUE •

    $default  reduce using rule 26 (condition)


State 60

   27 condition: FALSE •

    $default  reduce using rule 27 (condition)


State 61

   52 value: NUMBER •

    $default  reduce using rule 52 (value)


State 62

   53 value: FLOAT_NUM •

    $default  reduce using rule 53 (value)


State 63

   55 value: ID •

    $default  reduce using rule 55 (value)


State 64

   15 body: IF $@3 '(' condition • ')' $@4 '{' body '}' $@5 else

    ')'  shift, and go to state 75


State 65

   25 condition: value • relop value

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 76


State 66

   32 statement: ID $@10 '=' expression •
   40 expression: expression • arithmetic expression

    ADD       shift, and go to state 77
    MULTIPLY  shift, and go to state 78
    DIVIDE    shift, and go to state 79
    SUBTRACT  shift, and go to state 80

    $default  reduce using rule 32 (statement)

    arithmetic  go to state 81


State 67

   41 expression: value •

    $default  reduce using rule 41 (expression)


State 68

   34 statement: ID $@11 relop expression •
   40 expression: expression • arithmetic expression

    ADD       shift, and go to state 77
    MULTIPLY  shift, and go to state 78
    DIVIDE    shift, and go to state 79
    SUBTRACT  shift, and go to state 80

    $default  reduce using rule 34 (statement)

    arithmetic  go to state 81


State 69

   38 init: '=' • value
